feature/GEINFRA-131: Various mods
